[tool.poetry]
name = "byte-thread"
version = "0.1.0"
description = ""
authors = ["jztchl <kmvishnu625@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.4"
djangorestframework = "^3.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
